# cellion

./: README.md  dev.docker-compose.yml  docker-compose.yml
back/: .dockerignore  .env.example  .gitignore  Cargo.toml  log.txt  perf.data
back/docker/: Dockerfile  dev.Dockerfile
back/migrations/2024-05-07-100711_create_solutions/: down.sql  up.sql
back/migrations/2024-05-07-102055_create_rooms/: up.sql
back/migrations/2024-05-07-102228_create_teachers/: up.sql
back/migrations/2024-05-07-122730_create_students/: up.sql
back/migrations/2024-05-07-123518_create_courses/: up.sql
back/migrations/2024-05-07-123718_create_parts/: up.sql
back/migrations/2024-05-07-124115_create_classes/: up.sql
back/migrations/2024-05-07-124743_create_sessions/: up.sql
back/migrations/2024-05-07-125504_create_sessions_rooms/: down.sql  up.sql
back/migrations/2024-05-07-125855_create_groups/: up.sql
back/migrations/2024-05-07-125955_create_sessions_teachers/: down.sql  up.sql
back/migrations/2024-05-07-130225_create_classes_groups/: down.sql  up.sql
back/migrations/2024-05-07-130422_create_students_groups/: down.sql  up.sql
back/migrations/2024-05-12-175422_create_classes_teachers/: down.sql  up.sql
back/migrations/2024-05-12-175428_create_classes_rooms/: down.sql  up.sql
back/src/: api.rs  main.rs  models.rs  schema.rs
back/src/api/: buffer_handler.rs  calendar_handler.rs  date_service.rs  dto.rs  publish_service.rs  publish_solution.rs  query_controller.rs  query_service.rs  query_solutions.rs  solution.rs  solution_controller.rs  solution_service.rs  (+2 more)
(+89 files in other folders)
